# ESPHome-finder

./: CMakeLists.txt
include/: devicewidget.h  mainwindow.hpp
libs/avahi/: CMakeLists.txt  avahi.cpp  avahi.hpp
src/: devicewidget.cpp  mainwindow.cpp
ui/: devicewidget.ui  mainwindow.ui
